--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "core-js": "^3.8.3",
     "vue": "^3.0.5",
-    "vue-router": "^3.5.1",
+    "vue-router": "^4.0.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
