--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.0",
     "nprogress": "^0.2.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3",
