--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.5.0",
+    "less-loader": "^7.3.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
     "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "eslintConfig": {
